# Storytelling

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/backend/: manage.py  requirements.txt
src/backend/config/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
src/backend/docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
src/backend/users/: models.py  serializers.py  urls.py  views.py
src/backend/users/migrations/: 0001_initial.py
